@@ -31,12 +31,12 @@ public class RoomSwitcher {
     }
     private void findSwitchRoom(){
         if (this.currentRoom.getConnectedRooms().size() == 1){
-            this.switchRoom = this.currentRoom.getConnectedRooms().getFirst();
+            this.switchRoom = this.currentRoom.getConnectedRooms().get(0);
         }else{
             float deltaYDownRoom = Math.abs(this.currentRoom.getMap().getLayers().get("Doors").getObjects().getByType(RectangleMapObject.class).get(1).getRectangle().y - this.currentRoom.getPlayer().getY());
             float deltaYUpRoom = Math.abs(this.currentRoom.getMap().getLayers().get("Doors").getObjects().getByType(RectangleMapObject.class).get(0).getRectangle().y - this.currentRoom.getPlayer().getY());
             if(deltaYDownRoom < deltaYUpRoom){
-                this.switchRoom = this.currentRoom.getConnectedRooms().getFirst();
+                this.switchRoom = this.currentRoom.getConnectedRooms().get(0);
             }else{
                 this.switchRoom = this.currentRoom.getConnectedRooms().get(1);
             }
